fixed the overflow of hero text at mobil scale and started working on media queries for 4k screens. The footer and black jack are going to take more adjusting then the other parts but I might see if I can do it all in js instead of css. I was thinking maybe make variable for scalling factors that I could just plug into the measurements for all the different screen sizes so I didn't have to write them all out for each screen size.

--- a/resources/style.css
+++ b/resources/style.css
@@ -164,7 +164,7 @@ your hole page from top to bottom with flex I think. Flex just works in any case
 	margin: 0;
 	margin-bottom: 50px;
 	width: 100%;
-	height: 500px;
+	height: 550px;
 	padding: 0;
 	background: linear-gradient(315deg, gray, lightgray, gray) ;
 	
@@ -189,7 +189,7 @@ your hole page from top to bottom with flex I think. Flex just works in any case
 	margin: 0;
 	margin-bottom: 50px;
 	width: 100%;
-	height: 500px;
+	height: 550px;
 	padding: 0;
 	background: linear-gradient(45deg, gray, lightgray, gray);
 }
@@ -210,7 +210,7 @@ your hole page from top to bottom with flex I think. Flex just works in any case
 	align-items: center;
 	margin: 0;
 	width: 100%;
-	height: 500px;
+	height: 550px;
 	padding: 0;
 	background: linear-gradient(315deg, gray, lightgray, gray);
 }
@@ -976,6 +976,16 @@ input:-webkit-autofill:active{
 
 
 @media only screen and (max-width: 755px) {
+
+	.hero-header {
+		font-size: 8vh;
+	}
+
+	.reflect, .tea-cozy, .repurposed-living {
+		height: 300px;
+	}
+
+
 	
 	body {
 		width: 100%;
@@ -1260,6 +1270,21 @@ input:-webkit-autofill:active{
 
 }
 
+
+@media only screen and (min-width: 3800px) {
+	.reflect, .tea-cozy, .repurposed-living {
+		height: 1200px;
+	}
+
+	.web-page-header {
+		font-size: 8rem;
+	}
+
+	.web-page-p {
+		font-size: 3rem;
+	}
+
+}
 
 
 
